# BeUnique

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/static/: index.html  styles.css
