[package]
name = "backend"
version = "0.1.0"
authors = ["rimathia <rimathia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "macros", "stream", "sync", "time"] }
warp = "0.2"