[package]
name = "backend"
version = "0.1.0"
authors = ["rimathia <rimathia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
rand = "0.8.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.2"
warp = "0.3"