[package]
name = "frontend"
version = "0.1.0"
authors = ["rimathia <rimathia@users.noreply.github.com>"]
edition = "2018"
description = "websocket example"
repository = ""
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }

anyhow = "1.0.37"
serde_json = "1.0"
wasm-bindgen = "0.2.67"
yew = "0.17"
