[package]
name = "frontend"
version = "0.1.0"
authors = ["rimathia <rimathia@users.noreply.github.com>"]
edition = "2018"
description = "websocket example"
repository = ""
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }

anyhow = "1.0.37"
itertools = ">=0.10"
log = "0.4"
serde_json = "1.0"
# uuid = {version = "0.8", features=["v4", "wasm-bindgen"]}
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
yew = "0.17"
